--- a/config/asciidoctor-pdf/themes/print-theme.yml
+++ b/config/asciidoctor-pdf/themes/print-theme.yml
@@ -100,7 +100,7 @@ title_page:
     top: 10%
   title:
     top: 55%
-    font_size: $heading_h1_font_size
+    font_size: $heading_h1_font_size * 0.85
     font_color: 999999
     line_height: 0.9
   subtitle:
