--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: makenowjust/techbookfest-build:0.24.2-1
+      - image: makenowjust/techbookfest-build:latest
     steps:
       - checkout
       - restore_cache:
