Update rubocop rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,9 @@
 AllCops:
   TargetRubyVersion: 2.5
-  Excludes:
+  Exclude:
     - 03-syntax/examples/*.rb
     - vendor/bundle/**/*
+
+Style/AccessModifierDeclarations:
+  EnforcedStyle: inline
+
