--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ destination: build/docs
 baseurl: /introducing-crystal
 
 title: 入門 Crystal
+description: 『入門 Crystal』はプログラミング言語 Crystal の初心者〜中級者向け解説書です。
 author: Crystal-JP
 avatar: assets/images/avatar.png
 
