--- a/05-shards/projects/simple_html/shard.yml
+++ b/05-shards/projects/simple_html/shard.yml
@@ -2,7 +2,7 @@ name: simple_html
 version: 0.1.0
 
 authors:
-  - ʕ·ᴥ·ʔAKJ <arcage@denchu.org>
+  - Your Git Name <your_mail@example.org>
 
 targets:
   simple_html:
