--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,52 @@ jobs:
       - run:
           name: Test
           command: bundle exec rake test
+      - persist_to_workspace:
+          root: build
+          paths:
+            - docs
+  deploy:
+    docker:
+      - image: makenowjust/techbookfest-build:0.26.1-4
+    steps:
+      - attach_workspace:
+          at: build
+      - add_ssh_keys:
+          fingerprints:
+            - "ad:ae:94:c4:a1:35:a3:9f:10:dd:ae:d7:ea:b6:89:1d"
+      - run:
+          name: Deploy
+          command: |
+            git config --global user.email $GH_EMAIL
+            git config --global user.name $GH_NAME
+
+            git clone $CIRCLE_REPOSITORY_URL out
+
+            cd out
+            git checkout gh-pages || git checkout --orphan gh-pages
+            git rm -rf .
+            cd ..
+
+            cp -a build/docs/. out/.
+
+            mkdir -p out/.circleci && cp -a .ciecleci/. out/.circleci
+
+            cd out
+            git add -A
+            git commit --allow-empty -m "Deploy: ${CIRCLE_SHA1}"
+            git push origin gh-pages
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+        filters:
+          branches:
+            ignore: gh-pages
+      - deploy
+        requires:
+          - build
+        filters:
+          branches:
+            only: master
