--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,13 +68,13 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
-        filters:
-          branches:
-            ignore: gh-pages
-      - deploy
-        requires:
-          - build
-        filters:
-          branches:
-            only: master
+      - build:
+          filters:
+            branches:
+              ignore: gh-pages
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
