git rmがファイルが無い場合に失敗するので|| trueを追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             mkdir -p build/out
             cd build/out
             git checkout gh-pages || git checkout --orphan gh-pages
-            git rm -rf .
+            git rm -rf . || true
             cd ../..
 
             cp -a build/docs/. build/out/.
