--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: makenowjust/techbookfest-build:0.26.1-4
+      - image: makenowjust/techbookfest-build:0.27.2
     steps:
       - checkout
       - restore_cache:
