--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.0
 jobs:
   build:
     docker:
+      # TODO: Update to 0.36.1
       - image: makenowjust/techbookfest-build:0.31.1
     steps:
       - checkout
