Integrate setup-ruby for missing bundler
https://github.com/crystal-jp/introducing-crystal/runs/6962785683?check_suite_focus=true

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,10 @@ jobs:
       with:
         crystal: 1.0.0
     - name: Install Ruby Deps
-      run: bundle install
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '2.7.0'
+        bundler-cache: true
     - name: Install Redpen
       run: |
         cd /tmp
