[tmp] Test behavior in staging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: Build
 on:
   push:
     branches: [main]
+  # To test. Remove this after CI passed
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
